# rust_mvc_htmx

./: .env  Cargo.toml  README.md  docker-compose.yml  dockerfile
.sqlx/: query-2e160a70c11e85ccb81247a78f104edb5b687bd6706f0be11da60f04f5176972.json  query-5f571daca45b2c359b73e4aa158c1762c021d4d05134fd674f3e9a9ee838eb9d.json  query-61495b4c03b1fd06883b519c6667c67c4ac2668f74d25f9cd003207241e20d1c.json  query-8630df6379f9b253aa2f41e5b9bf635daa3dc1d4675919177d19fdbcd52f0588.json  query-c1c093273562457f2cc58d00812206d7a6ae8ea20f12f2b8c82124623d630691.json  query-cecb167c26fe8edc3e24a8e9b6f765bf3a3a9323106512fed95ef005f769b896.json
assets/css/: layout.css
postgresql/: dockerfile  init.sql
src/: db.rs  main.rs
src/common/: http.rs  mod.rs
src/controllers/: mod.rs  movie_controller.rs  static_resource.rs
src/model/: mod.rs  movie_repo.rs
templates/: edit.html  layout.html  list.html  list_row.html  page_404.html  page_error.html
